changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Add missing CF_PLUGIN in cflogger. This would only fail on Windows since by
default on *nix, all symbols are exported. Thus this error went unnoticed
until I tried with -fvisibility=hidden and setting the MODULEAPI and CF_PLUGIN
macros use __attribute__((visibility("default"))...
Arvid Norlander 2010-10-09

Fix some serious compiler warnings (missing declaration of function, fixed by
adding an #include; wrong type for argument to snprintf, fixed by changing to
use the proper variable) in the test suites.
Arvid Norlander 2010-10-08

Fix case where a size_t* and an int* were confused. On my system that
resulted in rare data corruption sometimes when the function in question
was called.
Arvid Norlander 2010-10-08

Fix format string used to include pid in temporary filenames. It was
%hx (short) but in reality pids are these days 32-bit. Change to %x and
cast the parameter to unsignd int.
Arvid Norlander 2010-10-08

Add missing -I in utils/Makefile.am, otherwise mapper.c doesn't find
global.h.
Arvid Norlander 2010-10-06

Don't crash when there is a mood floor with speed in a container.
Fix for bug #3079991: server crash from bad map object.
Nicolas Weeger 2010-10-03

Discard items of type PLAYER during map loading.
Fix for bug #3079997: server crash from misc type object in a petshop.
Nicolas Weeger 2010-10-03

New pickup type, 'container'.
Partial fix for bug #3075860: Auto-pickup fails to pickup certain items.
Nicolas Weeger 2010-10-02

Use 'magic devices' for weapon and armour improvers during pickup.
Partial fix for bug #3075860: Auto-pickup fails to pickup certain items.